--- a/public/publication/preprint/index.html
+++ b/public/publication/preprint/index.html
@@ -763,7 +763,7 @@
             
           
           <li>
-            <a itemprop="sameAs" href="https://github.com/gcushen" target="_blank" rel="noopener">
+            <a itemprop="sameAs" href="https://github.com/rayms" target="_blank" rel="noopener">
               <i class="fab fa-github-square"></i>
             </a>
           </li>
